add netlify.toml file

--- a/src/core/config/layout.config.json
+++ b/src/core/config/layout.config.json
@@ -12,7 +12,7 @@
   },
   "loader": {
     "type": "spinner-logo",
-    "logo": "media/logos/logo-AppsCyclone.png",
+    "logo": "media/logos/logo-apps.png",
     "message": "Please wait..."
   },
   "breakpoints": {
