add netlify.toml file

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
             "plugin:vue/essential",
             "eslint:recommended"
         ],
-        "rules": [],
+        "rules": {},
         "parserOptions": {
             "parser": "babel-eslint"
         }
